Gatewayserver测试